--- a/3T_VPC_setup.yml
+++ b/3T_VPC_setup.yml
@@ -5,7 +5,7 @@
     - name: Import VPC variables
       include_vars: vars/vpc_setup
 
-  	- name: Create 3Tier VPC
+  	- name: Create T3ier VPC
       ec2_vpc_net:
         name: "{{vpc_name}}"
         cidr_block: "{{vpc_cidr}}"
@@ -14,79 +14,79 @@
         dns_hostnames: yes
         tenancy: default
         state: "{{state}}"
-      register: 3Tvpcout
+      register: T3vpcout
       
     - debug:
-        var: 3Tvpcout
+        var: T3vpcout
         
     - name: create public subnet1 for web in zone1
       ec2_vpc_subnet:
-        vpc_id: "{{3Tvpcout.vpc.id}}"
+        vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: "{{state}}"
         cidr: "{{pubsub1cidr}}"
         map_public: yes
         resource_tags:
-          Name: 3T-WEB-1a
-      register: 3Tpubsub1zone1web_out
+          Name: T3-WEB-1a
+      register: T3pubsub1zone1web_out
     
     - name: create public subnet2 in zone2
       ec2_vpc_subnet:
-        vpc_id: "{{3Tvpcout.vpc.id}}"
+        vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
         state: "{{state}}"
         cidr: "{{pubsub2cidr}}"
         map_public: yes
         resource_tags:
-          Name: 3T-WEB-1b
-      register: 3Tpubsub1zone2web_out
+          Name: T3-WEB-1b
+      register: T3pubsub1zone2web_out
 
     - name: create public subnet3 for app in zone1
       ec2_vpc_subnet:
-        vpc_id: "{{3Tvpcout.vpc.id}}"
+        vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: "{{state}}"
         cidr: "{{pubsub3cidr}}"
         map_public: yes
         resource_tags:
-          Name: 3T-APP-1a
-      register: 3Tpubsub3zone1app_out
+          Name: T3-APP-1a
+      register: T3pubsub3zone1app_out
     
     - name: create public subnet4 in zone2
       ec2_vpc_subnet:
-        vpc_id: "{{3Tvpcout.vpc.id}}"
+        vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
         state: "{{state}}"
         cidr: "{{pubsub4cidr}}"
         map_public: yes
         resource_tags:
-          Name: 3T-APP-1b
-      register: 3Tpubsub4zone2app_out
+          Name: T3-APP-1b
+      register: T3pubsub4zone2app_out
 
     - name: create public subnet5 for db in zone1
       ec2_vpc_subnet:
-        vpc_id: "{{3Tvpcout.vpc.id}}"
+        vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: "{{state}}"
         cidr: "{{pubsub5cidr}}"
         map_public: yes
         resource_tags:
-          Name: 3T-DB-1a
-      register: 3Tpubsub5zone1db_out
+          Name: T3-DB-1a
+      register: T3pubsub5zone1db_out
     
     - name: create public subnet6 for db in zone2
       ec2_vpc_subnet:
-        vpc_id: "{{3Tvpcout.vpc.id}}"
+        vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
         state: "{{state}}"
         cidr: "{{pubsub4cidr}}"
         map_public: yes
         resource_tags:
-          Name: 3T-DB-1b
-      register: 3Tpubsub6zone2db_out
+          Name: T3-DB-1b
+      register: T3pubsub6zone2db_out
