--- a/3T_VPC_setup.yml
+++ b/3T_VPC_setup.yml
@@ -5,7 +5,7 @@
     - name: Import VPC variables
       include_vars: vars/vpc_setup
 
-  	- name: Create T3ier VPC
+    - name: Create T3ier VPC
       ec2_vpc_net:
         name: "{{vpc_name}}"
         cidr_block: "{{vpc_cidr}}"
@@ -90,3 +90,84 @@
         resource_tags:
           Name: T3-DB-1b
       register: T3pubsub6zone2db_out
+    - name: Internet Gateway Setup
+      ec2_vpc_igw:
+        vpc_id: "{{T3vpcout.vpc.id}}"
+        region: "{{region}}"
+        state: "{{state}}"
+        resource_tags:
+          Name: T3_IGW
+      register: T3_igw_out
+
+    - name: Setup Public Subnet Route Table
+      ec2_vpc_route_table:
+        vpc_id: "{{T3vpcout.vpc.id}}"
+        region: "{{region}}"
+        tags:
+          Name: T3-PUBLIC-RT
+        subnets:
+          - "{{T3pubsub1zone1web_out.subnet.id}}"
+          - "{{T3pubsub1zone2web_out.subnet.id}}"
+        routes:
+          - dest: 0.0.0.0/0
+            gateway_id: "{{T3_igw_out.gateway_id}}"
+      register: T3_pubRT_out
+
+    - name: Create new NAT gateway fro T3 webapp
+      ec2_vpc_nat_gateway:
+        state: "{{state}}"
+        subnet_id: "{{T3pubsub1zone1web_out.subnet.id}}"
+        wait: yes
+        region: "{{region}}"
+        if_exist_do_not_create: true
+      register: T3_NATGW_out
+
+    - name: Setup private subnet route table
+      ec2_vpc_route_table:
+        vpc_id: "{{T3vpcout.vpc.id}}"
+        region: "{{region}}"
+        tags:
+          Name: T3-PRIVATE-RT
+        subnets:
+          - "{{T3pubsub3zone1app_out.subnet.id}}"
+          - "{{T3pubsub4zone2app_out.subnet.id}}"
+          - "{{T3pubsub5zone1db_out.subnet.id}}"
+          - "{{T3pubsub6zone2db_out.subnet.id}}"
+        routes:
+          - dest: 0.0.0.0/0
+            gateway_id: "{{T3_NATGW_out.nat_gateway_id}}"
+      register: T3_privRT_out
+
+    - debug:
+        var: "{{item}}"
+      loop:
+        - T3vpcout.vpc.id
+        - T3pubsub3zone1app_out.subnet.id
+        - T3pubsub4zone2app_out.subnet.id
+        - T3pubsub5zone1db_out.subnet.id
+        - T3pubsub6zone2db_out.subnet.id
+        - T3pubsub1zone1web_out.subnet.id
+        - T3pubsub1zone2web_out.subnet.id
+        - T3_igw_out.gateway_id
+        - T3_pubRT_out.route_table.id
+        - T3_NATGW_out.nat_gateway_id
+        - T3_privRT_out.route_table.id
+
+    - set_fact:
+         vpcid: "{{T3vpcout.vpc.id}}"
+         pubsub1id: "{{T3pubsub1zone1web_out.subnet.id}}"
+         pubsub2id: "{{T3pubsub1zone2web_out.subnet.id}}"
+         pubsub3id: "{{T3pubsub3zone1app_out.subnet.id.subnet.id}}"
+         privsub1id: "{{T3pubsub4zone2app_out.subnet.id.subnet.id}}"
+         privsub2id: "{{T3pubsub5zone1db_out.subnet.id}}"
+         privsub3id: "{{T3pubsub6zone2db_out.subnet.id}}"
+         igwid: "{{T3_igw_out.gateway_id}}"
+         pubRTid: "{{T3_pubRT_out.route_table.id}}"
+         NATGWid: "{{T3_NATGW_out.nat_gateway_id}}"
+         privRTid: "{{T3_privRT_out.route_table.id}}"
+         cacheable: yes
+
+    - name: create variables file for VPC output
+      copy:
+        content: "vpcid: {{T3vpcout.vpc.id}}\npubsub1id: {{T3pubsub1zone1web_out.subnet.id}}\npubsub2id: {{T3pubsub1zone2web_out.subnet.id}}\npubsub3id: {{T3pubsub3zone1app_out.subnet.id.subnet.id}}\nprivsub1id: {{T3pubsub4zone2app_out.subnet.id.subnet.id}}\nprivsub2id: {{T3pubsub5zone1db_out.subnet.id}}\nprivsub3id: {{T3pubsub6zone2db_out.subnet.id}}\nigwid: {{T3_igw_out.gateway_id}}\npubRTid: {{T3_pubRT_out.route_table.id}}\nNATGWid: {{T3_NATGW_out.nat_gateway_id}}\nprivRTid: {{T3_privRT_out.route_table.id}}\n"
+        dest: vars/output_vars
