--- a/vpc_security_group.yml
+++ b/vpc_security_group.yml
@@ -19,7 +19,7 @@
     - debug:
         var: T3vpcout
     
-    - name: example using security group rule descriptions
+    - name: port 80 sg for 3 Tier
       ec2_group:
         name: "Sample SG"
         description: allow 80 from everywhere
@@ -31,6 +31,19 @@
             to_port: 80
             cidr_ip: 0.0.0.0/0
             rule_desc: allow all on port 80
+          
+          - proto: tcp
+            from_port: 22
+            to_port: 22
+            cidr_ip: 0.0.0.0/0
+            rule_desc: allow all on port 22
+            
+          - proto: ICMP
+            from_port: all
+            to_port: all
+            cidr_ip: 0.0.0.0/0
+            rule_desc: allow ICMP
+
       register: TestSG_out
     
     - name: Create ec2 key for adding into launch templates
