--- a/vpc_security_group.yml
+++ b/vpc_security_group.yml
@@ -20,7 +20,7 @@
         var: T3vpcout
     
     - name: port 80 sg for 3 Tier
-      ec2_group:
+      ec2_security_group:
         name: "Sample SG"
         description: allow 80 from everywhere
         vpc_id: "{{T3vpcout.vpc.id}}"
@@ -31,13 +31,11 @@
             to_port: 80
             cidr_ip: 0.0.0.0/0
             rule_desc: allow all on port 80
-          
           - proto: tcp
             from_port: 22
             to_port: 22
             cidr_ip: 0.0.0.0/0
             rule_desc: allow all on port 22
-            
           - proto: ICMP
             from_port: all
             to_port: all
