--- a/vpc_security_group.yml
+++ b/vpc_security_group.yml
@@ -31,11 +31,13 @@
             to_port: 80
             cidr_ip: 0.0.0.0/0
             rule_desc: allow all on port 80
+        rules:
           - proto: tcp
             from_port: 22
             to_port: 22
             cidr_ip: 0.0.0.0/0
             rule_desc: allow all on port 22
+        rules:
           - proto: ICMP
             from_port: all
             to_port: all
