--- a/3T_VPC_setup.yml
+++ b/3T_VPC_setup.yml
@@ -182,7 +182,7 @@
       register: key_out
 
 
-    - name: Save private key into file bastion-key.pem
+    - name: Save private key into file T3-key.pem
       copy:
         content: "{{key_out.key.private_key}}"
         dest: "./T3-key.pem"
