--- a/3T_VPC_setup.yml
+++ b/3T_VPC_setup.yml
@@ -138,7 +138,22 @@
           - dest: 0.0.0.0/0
             gateway_id: "{{T3_NATGW_out.nat_gateway_id}}"
       register: T3_privRT_out
-
+      
+    - name: Creating Auto Scaling Group for web tier 
+      autoscaling_group:
+        name: webtier-asg
+        load_balancers: []
+        availability_zones: [ "{{zone1}}", "{{zone2}}" ]
+        launch_template:
+          version: '1'
+          launch_template_name: 'lt-example' or launch_template_id: 'lt-123456'#To be filled/Changed
+        min_size: 2
+        max_size: 4
+        desired_capacity: 2
+        vpc_zone_identifier: [ "{{T3pubsub1zone1_out.subnet.id}}", "{{T3pubsub2zone2_out.subnet.id}}" ]
+        tags:
+          - environment: 3 tier
+            
     - debug:
         var: "{{item}}"
       loop:
