--- a/3T_VPC_setup.yml
+++ b/3T_VPC_setup.yml
@@ -5,7 +5,7 @@
     - name: Import VPC variables
       include_vars: vars/vpc_setup
 
-    - name: Create T3ier VPC
+    - name: Create 3Tier VPC
       ec2_vpc_net:
         name: "{{vpc_name}}"
         cidr_block: "{{vpc_cidr}}"
@@ -19,7 +19,7 @@
     - debug:
         var: T3vpcout
         
-    - name: create public subnet1 for web in zone1
+    - name: create public subnet1 in zone1
       ec2_vpc_subnet:
         vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
@@ -28,10 +28,10 @@
         cidr: "{{pubsub1cidr}}"
         map_public: yes
         resource_tags:
-          Name: T3-WEB-1a
-      register: T3pubsub1zone1web_out
+          Name: pub1–3tier-arch
+      register: T3pubsub1zone1_out
     
-    - name: create public subnet2 for web in zone2
+    - name: create public subnet2 in zone2
       ec2_vpc_subnet:
         vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
@@ -40,63 +40,64 @@
         cidr: "{{pubsub2cidr}}"
         map_public: yes
         resource_tags:
-          Name: T3-WEB-1b
-      register: T3pubsub1zone2web_out
+          Name: pub2–3tier-arch
+      register: T3pubsub2zone2_out
 
-    - name: create public subnet3 for app in zone1
+    - name: create private subnet3 in zone1
       ec2_vpc_subnet:
         vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: "{{state}}"
-        cidr: "{{pubsub3cidr}}"
+        cidr: "{{privsub3cidr}}"
         map_public: no
         resource_tags:
-          Name: T3-APP-1a
-      register: T3pubsub3zone1app_out
+          Name: priv3–3tier-arch
+      register: T3privsub3zone1_out
     
-    - name: create public subnet4 for app in zone2
+    - name: create private subnet4 in zone2
       ec2_vpc_subnet:
         vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
         state: "{{state}}"
-        cidr: "{{pubsub4cidr}}"
+        cidr: "{{privsub4cidr}}"
         map_public: no
         resource_tags:
-          Name: T3-APP-1b
-      register: T3pubsub4zone2app_out
+          Name: priv4–3tier-arch
+      register: T3privsub4zone2_out
 
-    - name: create public subnet5 for db in zone1
+    - name: create private subnet5 in zone1
       ec2_vpc_subnet:
         vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: "{{state}}"
-        cidr: "{{pubsub5cidr}}"
-        map_public: no
+        cidr: "{{privsub5cidr}}"
+        map_public: yes
         resource_tags:
-          Name: T3-DB-1a
-      register: T3pubsub5zone1db_out
+          Name: priv5–3tier-arch
+      register: T3privsub5zone1_out
     
-    - name: create public subnet6 for db in zone2
+    - name: create private subnet6 in zone1
       ec2_vpc_subnet:
         vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
         state: "{{state}}"
-        cidr: "{{pubsub6cidr}}"
-        map_public: no
+        cidr: "{{privsub6cidr}}"
+        map_public: yes
         resource_tags:
-          Name: T3-DB-1b
-      register: T3pubsub6zone2db_out
+          Name: priv6–3tier-arch
+      register: T3privsub6zone2_out
+      
     - name: Internet Gateway Setup
       ec2_vpc_igw:
         vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         state: "{{state}}"
         resource_tags:
-          Name: T3_IGW
+          Name: 3tier-arch-igw
       register: T3_igw_out
 
     - name: Setup Public Subnet Route Table
@@ -104,10 +105,10 @@
         vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         tags:
-          Name: T3-PUBLIC-RT
+          Name: my-public-RT
         subnets:
-          - "{{T3pubsub1zone1web_out.subnet.id}}"
-          - "{{T3pubsub1zone2web_out.subnet.id}}"
+          - "{{T3pubsub1zone1_out.subnet.id}}"
+          - "{{T3pubsub2zone2_out.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
             gateway_id: "{{T3_igw_out.gateway_id}}"
@@ -116,7 +117,7 @@
     - name: Create new NAT gateway fro T3 webapp
       ec2_vpc_nat_gateway:
         state: "{{state}}"
-        subnet_id: "{{T3pubsub1zone1web_out.subnet.id}}"
+        subnet_id: "{{T3pubsub1zone1_out.subnet.id}}"
         wait: yes
         region: "{{region}}"
         if_exist_do_not_create: true
@@ -127,21 +128,21 @@
         vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         tags:
-          Name: T3-PRIVATE-RT
+          Name: my-private-RT
         subnets:
-          - "{{T3pubsub3zone1app_out.subnet.id}}"
-          - "{{T3pubsub4zone2app_out.subnet.id}}"
-          - "{{T3pubsub5zone1db_out.subnet.id}}"
-          - "{{T3pubsub6zone2db_out.subnet.id}}"
+          - "{{T3privsub3zone1_out.subnet.id}}"
+          - "{{T3privsub4zone2_out.subnet.id}}"
+          - "{{T3privsub5zone1_out.subnet.id}}"
+          - "{{T3privsub6zone2_out.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
             gateway_id: "{{T3_NATGW_out.nat_gateway_id}}"
       register: T3_privRT_out
-      
+    
     - name: sg for 3 Tier public
       ec2_group:
-        name: "T3-PUBLIC-SG"
-        description: allow 22,80,ICMP from everywhere
+        name: "my3tierwebsg"
+        description: allow 22,80 from everywhere
         vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
         rules:
@@ -157,11 +158,11 @@
             cidr_ip: 0.0.0.0/0
             rule_desc: allow all on port 22
 
-      register: T3PUBLICSG
+      register: my3tierwebsg
 
     - name: sg for 3 Tier APP
       ec2_group:
-        name: "T3-APP-SG"
+        name: "apptiersg"
         description: allow 22,ICMP from everywhere
         vpc_id: "{{T3vpcout.vpc.id}}"
         region: "{{region}}"
@@ -169,10 +170,21 @@
           - proto: tcp
             from_port: 22
             to_port: 22
-            group_id: "{{T3PUBLICSG.group_id}}"
+            group_id: "{{my3tierwebsg.group_id}}"
+            rule_desc: allow all on port 22
+          - proto: tcp
+            from_port: 3306
+            to_port: 3306
+            cidr_ip: 0.0.0.0/0
+            rule_desc: allow all on port 3306
+          
+          - proto: tcp
+            from_port: 80
+            to_port: 80
+            cidr_ip: 0.0.0.0/0
             rule_desc: allow all on port 80
-
-      register: T3APPSG
+            
+      register: apptiersg
     
     
     - name: Create ec2 key for adding into launch templates
@@ -188,23 +200,38 @@
         dest: "./T3-key.pem"
         mode: 0600
       when: key_out.changed
-      
+    
+    - name: Creating Auto Scaling Group for web tier 
+      autoscaling_group:
+        name: webtier-asg
+        load_balancers: []
+        availability_zones: [ "{{zone1}}", "{{zone2}}" ]
+        launch_template:
+          version: '1'
+          launch_template_name: 'lt-example' or launch_template_id: 'lt-123456'#To be filled/Changed
+        min_size: 2
+        max_size: 4
+        desired_capacity: 2
+        vpc_zone_identifier: [ "{{T3pubsub1zone1_out.subnet.id}}", "{{T3pubsub2zone2_out.subnet.id}}" ]
+        tags:
+          - environment: 3 tier
+            
     - debug:
         var: "{{item}}"
       loop:
         - T3vpcout.vpc.id
-        - T3pubsub3zone1app_out.subnet.id
-        - T3pubsub4zone2app_out.subnet.id
-        - T3pubsub5zone1db_out.subnet.id
-        - T3pubsub6zone2db_out.subnet.id
-        - T3pubsub1zone1web_out.subnet.id
-        - T3pubsub1zone2web_out.subnet.id
+        - T3pubsub1zone1_out.subnet.id
+        - T3pubsub2zone2_out.subnet.id
+        - T3privsub3zone1_out.subnet.id
+        - T3privsub4zone2_out.subnet.id
+        - T3privsub5zone1_out.subnet.id
+        - T3privsub6zone2_out.subnet.id
         - T3_igw_out.gateway_id
         - T3_pubRT_out.route_table.id
         - T3_NATGW_out.nat_gateway_id
         - T3_privRT_out.route_table.id
 
-    - name: create variables file for VPC output
+    - name: create variables file for 3Tier ARCH
       copy:
-        content: "vpcid: {{T3vpcout.vpc.id}}\npubsub1id: {{T3pubsub1zone1web_out.subnet.id}}\npubsub2id: {{T3pubsub1zone2web_out.subnet.id}}\npubsub3id: {{T3pubsub3zone1app_out.subnet.id.subnet.id}}\nprivsub1id: {{T3pubsub4zone2app_out.subnet.id.subnet.id}}\nprivsub2id: {{T3pubsub5zone1db_out.subnet.id}}\nprivsub3id: {{T3pubsub6zone2db_out.subnet.id}}\nigwid: {{T3_igw_out.gateway_id}}\npubRTid: {{T3_pubRT_out.route_table.id}}\nNATGWid: {{T3_NATGW_out.nat_gateway_id}}\nprivRTid: {{T3_privRT_out.route_table.id}}\n"
+        content: "vpcid: {{T3vpcout.vpc.id}}\npubsub1id: {{T3pubsub1zone1_out.subnet.id}}\npubsub2id: {{T3pubsub2zone2_out.subnet.id}}\nprivsub3id: {{T3privsub3zone1_out.subnet.id}}\nprivsub4id: {{T3privsub4zone2_out.subnet.id}}\nprivsub5id: {{T3privsub5zone1_out.subnet.id}}\nprivsub6id: {{T3privsub6zone2_out.subnet.id}\nigwid: {{T3_igw_out.gateway_id}}\npubRTid: {{T3_pubRT_out.route_table.id}}\nNATGWid: {{T3_NATGW_out.nat_gateway_id}}\nprivRTid: {{T3_privRT_out.route_table.id}}\n"
         dest: vars/output_vars
