--- a/ASG.yml
+++ b/ASG.yml
@@ -28,7 +28,9 @@
       launch_config_name: my-launch-config-test
       min_size: 1
       max_size: 2
-      vpc_zone_identifiers: ['subnet-0254c4eb1ae7755a6']
+      vpc_zone_identifier: ['subnet-0254c4eb1ae7755a6']
       region: us-east-2
       desired_capacity: 1
       health_check_type: EC2
+      wait_for_instances: true
+      wait_timeout: 300
