--- a/ASG.yml
+++ b/ASG.yml
@@ -9,8 +9,7 @@
       instance_type: t2.micro
       key_name: T3-key
       region: us-east-2
-      security_groups: ['apptiersg']
-      instance_monitoring: yes
+      security_groups: 'apptiersg'
       user_data: |
         #!/bin/bash
         echo "Hello World!" > /tmp/hello.txt
