--- a/ASG.yml
+++ b/ASG.yml
@@ -1,6 +1,6 @@
 - hosts: localhost
   connection: local
-  gather_facts: False
+  gather_facts: no
   tasks:
     - name: Import VPC variables
       include_vars: vars/vpc_setup
