--- a/rds.yml
+++ b/rds.yml
@@ -1,27 +1,41 @@
-- name: Example RDS creation playbook
+- name: Create RDS Instance
   hosts: localhost
-  gather_facts: false
+  gather_facts: no
+
   vars:
     region: us-west-2
-    db_instance_identifier: mydbinstance
+    db_name: mydb
+    db_instance_identifier: my-db-instance
     db_instance_class: db.t2.micro
     db_engine: mysql
-    db_engine_version: "5.7"
-    db_name: mydb
-    db_username: myuser
-    db_password: mypassword
+    db_engine_version: "8.0.23"
+    db_username: admin
+    db_password: Password123
+    allocated_storage: 20
+    master_user_password: "{{ db_password }}"
     vpc_security_group_ids:
       - sg-0123456789abcdef
+    db_subnet_group_name: my-db-subnet-group
+    db_parameter_group_name: default.mysql8.0
+    backup_retention_period: 7
+    publicly_accessible: no
+
   tasks:
-    - name: Create RDS instance
+    - name: Create RDS Instance
       rds:
         command: create
         region: "{{ region }}"
-        db_instance_identifier: "{{ db_instance_identifier }}"
+        instance_name: "{{ db_instance_identifier }}"
+        db_name: "{{ db_name }}"
         db_instance_class: "{{ db_instance_class }}"
         engine: "{{ db_engine }}"
         engine_version: "{{ db_engine_version }}"
-        db_name: "{{ db_name }}"
         username: "{{ db_username }}"
         password: "{{ db_password }}"
+        allocated_storage: "{{ allocated_storage }}"
+        master_user_password: "{{ master_user_password }}"
         vpc_security_group_ids: "{{ vpc_security_group_ids }}"
+        db_subnet_group_name: "{{ db_subnet_group_name }}"
+        db_parameter_group_name: "{{ db_parameter_group_name }}"
+        backup_retention_period: "{{ backup_retention_period }}"
+        publicly_accessible: "{{ publicly_accessible }}"
